--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,6 +14,13 @@ body
     padding: 0;
 }
 
+a[ target="_blank" ]:after
+{
+    content: "⧉";
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
 .container
 {
     max-width: 1200px;
@@ -27,9 +34,41 @@ header.site
     background-image: radial-gradient(192.69% 65.51% at 170% 85%, rgba(15, 13, 44, 0) 0px, rgb(15, 13, 44) 100%), linear-gradient(245.69deg, rgb(0, 255, 255) 13.03%, rgb(54, 84, 221));
 }
 
+header.site a
+{
+    text-decoration: none;
+    color: white;
+}
+
 header.site h1
 {
     font-weight: 200;
+}
+
+section.content .container
+{
+    display: flex;
+    gap: 1rem;
+    padding: 0;
+}
+
+section.content nav
+{
+    display: flex;
+    flex-direction: column;
+    width: 12vw;
+    gap: 1rem;
+    text-align: left;
+    flex-grow: 1 / 1;
+    background-color: #f2f2f2;
+    padding: 1rem;
+}
+
+section.content div.content
+{
+    width: 100%;
+    flex-grow: 2 / 2;
+    padding: 1rem;
 }
 
 footer.site
